<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_layout"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rominakehl.notizbuch.MainActivity"
    android:weightSum="1">

    <Button
        android:text="@string/cmdSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cmdSave" />

    <Button
        android:text="@string/cmdShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cmdShow" />

    <Button
        android:text="@string/cmdDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cmdDelete" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtFile"
        android:hint="@string/textFileHint" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:id="@+id/radioGroupClassification">

        <RadioButton
            android:text="@string/radioVeryImportant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioVeryImportant"
            android:layout_weight="1"
            android:checked="true"
            android:textColorLink="@android:color/holo_green_dark" />


        <RadioButton
            android:text="@string/radioImportant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioImportant"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/radioNotImportant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioNotImportant"
            android:layout_weight="1" />
    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textAutoCorrect"
        android:ems="10"
        android:id="@+id/txtNote"
        android:layout_weight="0.88"
        android:hint="@string/inputTextHint" />

</LinearLayout>
